--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -18,6 +18,7 @@ h3 {
 	margin: auto;
 	text-align: center;
 	font-size: 80px;
+	padding: 20px;
 }
 
 .year {
@@ -25,11 +26,18 @@ h3 {
 	border: 10px solid black;
 	height: 150px;
 	width: 300px;
-	margin: 40px auto;
+	margin: auto;
 	text-align: center;
 	font-size: 50px;
 	padding: auto;
 
+}
+
+.buttonContainer {
+	width: 1500px;
+	height: 300px;
+	margin: auto;
+	padding: auto;
 }
 
 .time {
